--- a/style.css
+++ b/style.css
@@ -1,58 +1,287 @@
-    <!DOCTYPE html>
-    <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EUJEONG's HBD</title>
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" href="https://jeondaye.github.io/btd_event/style.css">
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    </head>
-    <body>
-        <div id="hbd_wrap">
-            <section id="logo">
-                <img src="https://jeondaye.github.io/btd_event/images/hbd_cake.png" alt="케이크">
-            </section>  
-            <section id="menu">
-                <div class="menu_area">
-                    <button type="button" id="cardpop" title="menu1"><i class='bx bx-cake'></i><span class="menu_txt">생일카드 보기</span></button>
-                    <button type="button" title="menu2" onclick="location.href='https://jeondaye.github.io/btd_event/webcam.html'"><i class='bx bxs-cake' ></i><span class="menu_txt">기념촬영하기</span></button>
-                </div>
-                <div id="modal"></div>
-                <div id="card_cont">
-                    <button type="button" id="close_button2" class="close_button" title="close2"><i class='bx bx-x'></i></button>
-                    <img src="https://jeondaye.github.io/btd_event/images/hbd_card.png" alt="생일카드1">
-                    <a href="https://jeondaye.github.io/btd_event/write_letter.html"><img src="https://jeondaye.github.io/btd_event/images/hbd_card2.png" alt="생일카드2"></a>
-                    <button type="button" id="close_button" class="close_button" title="close"><i class='bx bx-x'></i></button>
-                </div>
-            </section>
-            <section id="content">
-                <div class="" style="opacity: 0;"><img src="https://jeondaye.github.io/btd_event/images/logo.png" width="250" alt=""><img src="https://jeondaye.github.io/btd_event/images/logo.png" width="250" alt=""></div>
-                <div class="img1 ani"><img src="https://jeondaye.github.io/btd_event/images/logo_neon.png" alt=""></div>
-                <div class="img1"><img src="https://jeondaye.github.io/btd_event/images/logo_neon1.png" alt=""></div>
-            </section>
-        </div>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $("#cardpop").click(function() {
-                    $("#card_cont").show();
-                });
-            
-                $("#cardpop").click(function() {
-                    $("#card_cont").fadeIn();
-                    $("#modal").fadeIn();
-                });
-            
-                $("#close_button").click(function(){
-                    $("#card_cont").fadeOut();
-                    $("#modal").fadeOut();
-                });
-                $("#close_button2").click(function(){
-                    $("#card_cont").fadeOut();
-                    $("#modal").fadeOut();
-                });
-            });
-            </script>
-    </body>
-    </html>
+@charset "utf-8";
+
+@import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
+
+@font-face {
+    font-family: 'NeoDunggeunmo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.3/NeoDunggeunmo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'DungGeunMo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HBIOS-SYS';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/HBIOS-SYS.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'KyoboHand';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'drfont_daraehand';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/drfont_daraehand.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+html, body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
+button{
+    background: none;
+    border: none;
+}
+
+/* index page */
+#hbd_wrap {
+    background: #f1e1ff;
+    max-width: 750px;
+    margin: 0 auto;
+    position: relative;
+}
+#hbd_wrap #logo{
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 40px;
+}
+#hbd_wrap #logo img{
+    width: 117px;
+}
+#hbd_wrap h2{
+    font-family: 'drfont_daraehand';
+    color: #904fe7;
+    font-size: 20px;
+    padding-top:30px;
+}
+#hbd_wrap #menu .menu_area{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 30px 0 0;
+}
+#hbd_wrap #menu .menu_area button i{
+    font-size: 30px;
+    color: #904fe7;
+}
+#hbd_wrap #menu .menu_area .menu_txt{
+    font-family: 'drfont_daraehand';
+    color: #904fe7;
+    font-size: 15px;
+    position: relative;
+    top: -6px;
+    left: 5px;
+}
+
+#hbd_wrap #content{
+    position: relative;
+    padding: 0px 0 105px;
+    margin-top: 50px;
+}
+#hbd_wrap #content .img1{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#hbd_wrap #content .img1 img{
+    width: 300px;
+}
+#hbd_wrap #content .ani{
+    animation: neon 2s infinite;
+}
+@keyframes neon{
+    0%{opacity: 0.2;}
+    50%{opacity: 1;}
+    100%{opacity: 0.2;}
+}
+#card_cont{
+    display: none;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+    top: 0;
+    padding-top: 10px;
+}
+.close_button{
+    margin: 0 auto;
+    width: 320px;
+    font-size: 40px;
+    z-index: 1000;
+    color: #fff;
+    padding-bottom: 15px;
+}
+#card_cont img{
+    width: 320px;
+    margin-bottom: 15px;
+}
+#modal {
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    z-index: 99;
+    display: none;
+  }
+/* webcam page */
+#camera{
+    background: #f1e1ff;
+}
+
+#camera, #camera--view, #camera--sensor, #camera--output{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#camera--view, #camera--sensor, #camera--output{
+    transform: scaleX(-1);
+}
+#camera--view{
+    width: 90%;
+    height: 80%;
+    margin: 20px auto 0;
+    border: 1px solid #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#camera--trigger{
+    width: 275px;
+    color: white;
+    background-color: #b165f3;
+    font-size: 16px;
+    border-radius: 30px;
+    border: none;
+    padding: 15px 20px;
+    text-align: center;
+    font-family: 'galmuri11';
+}
+#camera--switch{
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 30px;
+    font-size: 30px;
+    color: #b165f3;
+    width: 50px;
+    height: 50px;
+    margin-top: 5px;
+}
+.camera_btn{
+    display: flex;
+    height: 55px;
+    position: absolute;
+    bottom: 5%;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
+}
+.cam_notice{
+    position: absolute;
+    bottom: 8px;
+    opacity: 0.4;
+    font-size: 14px;
+    font-family: KyoboHand;
+    width: 100%;
+    text-align: center;
+}
+.taken {
+    height: 64%!important;
+    width: 82%!important;
+    left: 50%;
+    margin: 20px auto 0;
+    transform: translateX(-50%) !important;
+}
+.templete{
+    background: #fff;
+    border: 1px solid #fff;
+    width: 90%;
+    height: 80%;
+    margin: 20px auto 0;
+    box-sizing: border-box;
+    position: relative;
+}
+.btd_txt{
+    font-family: 'Galmuri7';
+    position: absolute;
+    bottom: 4%;
+    width: 100%;
+    text-align: center;
+    line-height: 23px;
+}
+.blind{
+    display: none;
+}
+
+/* 편지쓰기 페이지 */
+#letter_wrap{
+    font-family: drfont_daraehand;
+    font-size: 20px;
+    margin: 100px auto;
+    width: 100%;
+    text-align: center;
+}
