--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ button{
     color: #904fe7;
     font-size: 20px;
     padding-top:30px;
+	text-align: center;
 }
 #hbd_wrap #menu .menu_area{
     display: flex;
