--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ button{
 #hbd_wrap #menu .menu_area{
     display: flex;
     justify-content: space-evenly;
-    padding: 30px 0 0;
+    padding: 30px 0;
 }
 #hbd_wrap #menu .menu_area button i{
     font-size: 30px;
